# Legal-document-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  skills-lock.json
.cursor/rules/: backend.mdc  core.mdc  frontend.mdc  rag.mdc  security-tenancy.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: health.py  me.py
backend/app/core/: auth.py  config.py  deps.py  exceptions.py  logging.py
backend/app/db/: rls.py  session.py
backend/app/models/: __init__.py  audit_event.py  base.py  chunk.py  conversation.py  document.py  message.py  obligation.py  organization.py  user.py
backend/app/schemas/: auth.py
backend/app/tests/: conftest.py  test_me.py  test_rls.py  test_tenant_isolation.py
docs/: BUILD_PLAN.md  DESIGN.md
frontend/: .npmrc  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
